# one

./: .gitignore  BULLETPROOF.md  CLAUDE.md  LOCK.md  MIROBEAR.md  README.md  VISION.md  pyproject.toml
docs/superpowers/plans/: 2026-03-13-one-implementation.md
docs/superpowers/specs/: 2026-03-13-one-design.md
one/: analogy.py  app.py  audit.py  auto.py  backend.py  claudemd.py  cli.py  client.py  contradictions.py  dialectic.py  engine.py  entities.py  epistemic_safety.py  excitation.py  experiments.py  gate.py  gemma.py  graph.py  ground.py  hdc.py  health.py  init.py  morgoth.py  playbook.py  proxy.py  remote.py  research.py  retrieve.py  rules.py  server.py  sessions.py  store.py  swarm.py  swarm_tui.py  synthesis.py  tui.py  verification.py  watch.py
tests/: test_analogy.py  test_audit.py  test_contradictions.py  test_dialectic.py  test_entities.py  test_excitation.py  test_experiments.py  test_gate.py  test_hdc.py  test_health.py  test_morgoth.py  test_playbook.py  test_research.py  test_rules.py  test_server.py  test_store.py  test_swarm_tui.py  test_synthesis.py  test_verification.py
