[project]
name = "one"
version = "0.1.0"
description = "Infinite context for Claude CLI — HDC encoding, AIF gating, Palantir AIP ontology"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
dependencies = [
    "numpy",
    "textual>=0.40",
]

[project.optional-dependencies]
foundry = ["orion_push_sdk==0.1.0"]

[project.scripts]
one = "one.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
