[project]
name = "one"
version = "0.1.0"
description = "Persistent memory for AI coding tools"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy",
    "textual>=0.40",
]

[project.optional-dependencies]
foundry = [
    "orion_push_sdk==0.1.0",
    "foundry_sdk_runtime",
]

[project.scripts]
one = "one.cli:main"

[project.urls]
Homepage = "https://github.com/bcd532/one"
Repository = "https://github.com/bcd532/one"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
